--- a/styles/main.css
+++ b/styles/main.css
@@ -117,12 +117,22 @@
 }
 
 .dialog__one {
-  height: 500px;
-  width: 100xp;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 800px;
+  width: 800px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  left: 30%;
+  overflow-x: hidden;
+
 }
 
 .dialog__one button {
-  margin-left: 1500px;
+  margin-bottom:20px ;
   text-decoration: none;
   color: black;
   font-size: 20px;
@@ -131,23 +141,24 @@
   border-radius: 5px;
   transition: background-color 0.3s ease, color 0.3s ease;
   margin-top: 100px;
-}
 
-.dialog__one button:hover {
-  background-color: #0077ff;
-  color: #fff;
+  &:hover {
+    background-color: #0077ff;
+    color: #fff;
+  }
 }
 
 .dialog__one img {
   margin-left: 200px;
-  width: 1000px;
+  width: 500px;
   height: 300px;
-  margin-right: 50px;
-}
+  margin-right: 100px;
+
+} 
 
 .dialog__one p {
   margin-top: 100px;
-  margin-left: 270px;
+  margin-left: 170px;
   font-size: 20px;
   text-align: left;
   font-weight: bold;
@@ -155,6 +166,8 @@
   width: 600px;
   height: 10px;
 }
+
+
 
 .section__four {
   display: flex;
